--- a/publication/icme22-stmae/index.html
+++ b/publication/icme22-stmae/index.html
@@ -285,8 +285,8 @@
 
 
 
-<link rel="icon" type="image/png" href="/media/icon_hub4a8cfd9b9ede80e1565b341e66849d4_8722_32x32_fill_lanczos_center_3.png" />
-<link rel="apple-touch-icon" type="image/png" href="/media/icon_hub4a8cfd9b9ede80e1565b341e66849d4_8722_180x180_fill_lanczos_center_3.png" />
+<link rel="icon" type="image/png" href="/media/icon_hub03b4b5a4868baa5217403a27f6bfa6d_3216_32x32_fill_lanczos_center_3.png" />
+<link rel="apple-touch-icon" type="image/png" href="/media/icon_hub03b4b5a4868baa5217403a27f6bfa6d_3216_180x180_fill_lanczos_center_3.png" />
 
 <meta name="theme-color" content="#3f51b5" />
 
@@ -368,7 +368,7 @@
     "name": "Yang Liu' Website",
     "logo": {
       "@type": "ImageObject",
-      "url": "https://fdjingliu.github.io/media/icon_hub4a8cfd9b9ede80e1565b341e66849d4_8722_192x192_fill_lanczos_center_3.png"
+      "url": "https://fdjingliu.github.io/media/icon_hub03b4b5a4868baa5217403a27f6bfa6d_3216_192x192_fill_lanczos_center_3.png"
     }
   },
   "description": "We propose spatial-temporal memories augmented two-stream auto-encoder framework, which learns the appearance normality and motion normal-ity independently and explores the correlations."
@@ -849,7 +849,7 @@
 
 
 
-<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.1109/ICME52920.2022.985972" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-page-header" href="https://doi.org/10.1109/ICME52920.2022.9859727" target="_blank" rel="noopener">
   DOI
 </a>
 
