--- a/publication/csur23-gvaed/index.html
+++ b/publication/csur23-gvaed/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: March 21, 2023 --><html lang="en-us" >
+<!-- Last Published: March 22, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -272,7 +272,7 @@
 
   
 
-<meta name="description" content="This review extends the narrow VAED concept from unsupervised video anomaly detection to Generalized Video Anomaly Event Detection (GVAED), which provides a comprehensive survey that integrates recent works based on different assumptions and learning frameworks into an intuitive taxonomy and coordinates unsupervised, weakly-supervised, fully-unsupervised, and supervised VAED routes." />
+<meta name="description" content="This review extends the narrow VAED concept from unsupervised video anomaly detection to Generalized Video Anomaly Event Detection, which provides a comprehensive survey that integrates recent works based on different assumptions and learning frameworks into an intuitive taxonomy." />
 
 
 
@@ -314,7 +314,7 @@
 <meta property="og:site_name" content="Yang Liu&#39; Website" />
 <meta property="og:url" content="https://fdjingliu.github.io/publication/csur23-gvaed/" />
 <meta property="og:title" content="Generalized Video Anomaly Event Detection: Systematic Taxonomy and Comparison of Deep Models | Yang Liu&#39; Website" />
-<meta property="og:description" content="This review extends the narrow VAED concept from unsupervised video anomaly detection to Generalized Video Anomaly Event Detection (GVAED), which provides a comprehensive survey that integrates recent works based on different assumptions and learning frameworks into an intuitive taxonomy and coordinates unsupervised, weakly-supervised, fully-unsupervised, and supervised VAED routes." /><meta property="og:image" content="https://fdjingliu.github.io/publication/csur23-gvaed/featured.png" /><meta property="og:locale" content="en-us" />
+<meta property="og:description" content="This review extends the narrow VAED concept from unsupervised video anomaly detection to Generalized Video Anomaly Event Detection, which provides a comprehensive survey that integrates recent works based on different assumptions and learning frameworks into an intuitive taxonomy." /><meta property="og:image" content="https://fdjingliu.github.io/publication/csur23-gvaed/featured.png" /><meta property="og:locale" content="en-us" />
 
   
     <meta
@@ -371,7 +371,7 @@
       "url": "https://fdjingliu.github.io/media/icon_hub03b4b5a4868baa5217403a27f6bfa6d_3216_192x192_fill_lanczos_center_3.png"
     }
   },
-  "description": "This review extends the narrow VAED concept from unsupervised video anomaly detection to Generalized Video Anomaly Event Detection (GVAED), which provides a comprehensive survey that integrates recent works based on different assumptions and learning frameworks into an intuitive taxonomy and coordinates unsupervised, weakly-supervised, fully-unsupervised, and supervised VAED routes."
+  "description": "This review extends the narrow VAED concept from unsupervised video anomaly detection to Generalized Video Anomaly Event Detection, which provides a comprehensive survey that integrates recent works based on different assumptions and learning frameworks into an intuitive taxonomy."
 }
 </script>
 
