--- a/publication/tcasii22-weak/index.html
+++ b/publication/tcasii22-weak/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: March 21, 2023 --><html lang="en-us" >
+<!-- Last Published: March 22, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -745,18 +745,25 @@
 
 
 
-  
+
+
+
+
+
+
+
+
 
   
   
-  
+
+
 <div class="article-container pt-3">
   <h1>Collaborative Normality Learning Framework for Weakly Supervised Video Anomaly Detection</h1>
 
   
 
   
-    
 
 
 <div class="article-metadata">
@@ -802,7 +809,7 @@
 
 </div>
 
-    
+  
 
 
 
@@ -850,7 +857,14 @@
 </div>
 
 
-  
+</div>
+
+
+<div class="article-header article-container featured-image-wrapper mt-4 mb-4" style="max-width: 720px; max-height: 242px;">
+  <div style="position: relative">
+    <img src="/publication/tcasii22-weak/featured_hub4e4fe6cae36d433db04e1cd456f7034_193281_720x2500_fit_q75_h2_lanczos_3.webp" width="720" height="242" alt="" class="featured-image">
+    <span class="article-header-caption">CNL</span>
+  </div>
 </div>
 
 
