--- a/publication-type/1/index.html
+++ b/publication-type/1/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: March 21, 2023 --><html lang="en-us" >
+<!-- Last Published: March 22, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -735,7 +735,7 @@
     
     <a href="/publication/icme22-stmae/"  class="summary-link">
       <div class="article-style">
-        We propose spatial-temporal memories augmented two-stream auto-encoder framework, which learns the appearance normality and motion normal-ity independently and explores the correlations.
+        We propose spatial-temporal memories augmented two-stream auto-encoder framework, which learns the appearance normality and motion normality independently and explores the correlations.
       </div>
     </a>
     
