--- a/talk/example-talk/index.html
+++ b/talk/example-talk/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This site was created with Wowchemy. https://www.wowchemy.com -->
-<!-- Last Published: March 21, 2023 --><html lang="en-us" >
+<!-- Last Published: March 22, 2023 --><html lang="en-us" >
 
 
 <head>
@@ -1074,8 +1074,8 @@
 
     <div class="media-body">
       <h5 class="card-title"><a href="https://fdjingliu.github.io/">Yang Liu</a></h5>
-      <h6 class="card-subtitle">Ph.D Candidate</h6>
-      <p class="card-text">My research interests include signal processing, causal machine learning, computer vision ,and video anomaly detection.</p>
+      <h6 class="card-subtitle">Ph.D. Candidate</h6>
+      <p class="card-text">I am a Ph.D. student at Fudan University, majoring in computer science, with research interests in signal processing and computer vision.</p>
       <ul class="network-icon" aria-hidden="true">
   
     
