--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@
   <div class="col-12 col-lg-8">
 
     
-    <h1>Bio</h1>
+    <h1>Profiles</h1>
 
     <div class="article-style">
       <p>I am pursuing the Ph.D. at Fudan University, supervised by Prof. <a href="https://scholar.google.com/citations?user=6yda24oAAAAJ&amp;hl=en" target="_blank" rel="noopener">Liang Song</a>. I received my B.S. degree as an honored undergraduate from <a href="https://njunju.nju.edu.cn/EN/main.htm" target="_blank" rel="noopener">Nanjing University</a> in 2020. My research interests include causal machine learning and computer vision, focusing on online evolutive learning and video anomaly detection. Currently, I am an algorithm intern in the RF Perception Group of <a href="https://www.shlab.org.cn/" target="_blank" rel="noopener">Shanghai AI Lab</a>. I plan to join the <a href="https://tisl.cs.toronto.edu/" target="_blank" rel="noopener">Toronto Intelligent Systems Lab</a> at UofT and work with Prof. <a href="https://scholar.google.com/citations?user=Nuw1Y4oAAAAJ&amp;hl=en" target="_blank" rel="noopener">Igor Gilitschenski</a> as a visiting Ph.D. student.</p>
